# rust_warp_webapi_demo

./: .env  Cargo.toml  README.md
config/: log4rs.yaml
src/: main.rs
src/controllers/: user.rs
src/models/: user.rs
src/routers/: router.rs
