[package]
edition = "2021"
name = "webapi"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "*"
dotenv = "*"
log = "*"
log4rs = "1.1.1"
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.82"
sqlx = {version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"]}
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
warp = "*"
